tests/errors/test-error-begin-continued-end.sac
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -b 1:loc -target ThisTargetDoesNotExist
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>OUTPUT=`$(CALL_SAC2C) $< 2>&1`; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -E "^Error:$$" | $(GREP_COMMAND_OUTPUT) "" 1; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -F "  The configuration files do not contain a specification of target 'ThisTargetDoesNotExist\`." | $(GREP_COMMAND_OUTPUT) "" 1; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -E "^  You may choose a different .* e.g. in '~/.sac2crc/sac2crc\.mine\`." | $(GREP_COMMAND_OUTPUT) "" 1

// Redo it but with cti-single-line to test the different output.
// SAC_TEST|<tab>OUTPUT=`$(CALL_SAC2C) -cti-single-line -cti-message-length 0 $< 2>&1`; <nlslash>
// We expect only 2 lines:
// SAC_TEST|<tab>echo "$$OUTPUT" | $(GREP_COMMAND_OUTPUT) "" 2; <nlslash>
//// One for the error:
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -E "^Error: The configuration .* e.g. in '~/.sac2crc/sac2crc\.mine\`.$$" | $(GREP_COMMAND_OUTPUT) "" 1; <nlslash>
// And one for the usual compilation failed message:
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -F "Compilation failed while initial, 1 error(s)." | $(GREP_COMMAND_OUTPUT) "" 1; <nlslash>

// Test the functions CTIerrorBegin/Continued/End and the underlying CTF functions with no location information.

// No code is necessary - the command line argument "-target ThisTargetDoesNotExist" leads to an error.